feat(权限系统): 实现完整的权限管理系统并集成到核心功能
新增权限管理器模块，支持权限组配置和继承关系检查
重构插件管理器和命令处理器以支持权限验证
添加权限配置文件模板和默认权限设置
移除锁定时不必要的警告消息
更新依赖项以支持新功能

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "minecraft-data": "^3.102.3",
+    "minecraft-protocol": "^1.62.0",
     "mineflayer": "^4.33.0",
+    "mineflayer-pathfinder": "^2.4.5",
     "prismarine-nbt": "^2.7.0",
     "protodef": "^1.19.0",
     "seedrandom": "^3.0.5",
